--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "bootstrap-vue": "^2.4.0",
     "core-js": "^3.4.4",
     "font-awesome": "^4.7.0",
+    "lingallery": "github:ta0uf19/lingallery",
     "lodash": "^4.17.15",
     "npm-watch": "^0.6.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-feather-icons": "^5.0.0",
     "vue-infinite-loading": "^2.4.4",
+    "vue-js-modal": "^1.3.31",
+    "vue-page-transition": "^0.2.2",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
