--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "lingallery": "github:ta0uf19/lingallery",
     "lodash": "^4.17.15",
     "npm-watch": "^0.6.0",
+    "rm": "^0.1.8",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-feather-icons": "^5.0.0",
     "vue-infinite-loading": "^2.4.4",
     "vue-js-modal": "^1.3.31",
+    "vue-notification": "^1.3.20",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.1.5",
+    "vuejs-noty": "^0.1.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
