--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-notification": "^1.3.20",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.1.5",
+    "vuejs-jwt": "^1.1.0",
     "vuejs-noty": "^0.1.3",
     "vuex": "^3.1.2"
   },
