--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "vue-feather-icons": "^5.0.0",
     "vue-infinite-loading": "^2.4.4",
     "vue-js-modal": "^1.3.31",
+    "vue-multiselect": "^2.1.6",
     "vue-notification": "^1.3.20",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.1.5",
+    "vue-swal": "^1.0.0",
     "vuejs-jwt": "^1.1.0",
     "vuejs-noty": "^0.1.3",
     "vuex": "^3.1.2"
