--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "vue-swal": "^1.0.0",
     "vuejs-jwt": "^1.1.0",
     "vuejs-noty": "^0.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
