client add and client update

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "watch": "vue-cli-service build --watch"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@websanova/vue-auth": "^2.21.15-beta",
     "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
